<resources>
    <string name="app_name">Aircraft Powerplant</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="student_name"></string>
    <string name="hello_blank_fragment">TEST 123</string>
    <string name="title_activity_student_menu">StudentMenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="menu_discussion">Discussion</string>
    <string name="menu_test">Test knowledge</string>
    <string name="menu_logout">Signout</string>
    <string name="menu_statistics">Statistics</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="desc_turbo">A turbocharger is a turbine driven, forced induction device that is utilised in a piston engine to enable it to produce more power. This increase in air and fuel results in the turbocharged engine being more powerful and efficient than its naturally aspirated counterpart.</string>
    <string name="desc_ccover">A compressor cover includes a compressor inlet duct and an inlet for a compressor wheel. The compressor cover includes at least one appendix positioned between an upstream portion of the compressor inlet duct and the compressor wheel inlet.</string>
    <string name="desc_bhousing">Bearing housings are modular assemblies designed to make it easy to install bearings and shafts, while protecting bearings, extending their operating life and simplifying maintenance.</string>
    <string name="desc_splate">The Seal Plate, also known as a back plate or insert plate is where the front seal is generally seated. Made mainly of aluminium, these components MUST be very precise in dimensions to ensure a perfect clearance is found between surrounding components to ensure the perfect seal.</string>
    <string name="desc_piston">Piston is a disk or short cylinder fitting closely within a tube in which it moves up and down against a liquid or gas, used in an internal combustion engine to derive motion, or in a pump to impart motion.</string>
    <string name="desc_bbearing">A ball bearing is a type of rolling-element bearing that uses balls to maintain the separation between the bearing races. The purpose of a ball bearing is to reduce rotational friction and support radial and axial loads.</string>
    <string name="desc_bcage">The ball bearing cage (also known as a ball bearing retainer or ball separator – these are used interchangeably), is the component in a ball bearing that separates the balls, maintains the balls symmetrical radial spacing, and in most cases, holds the bearings together.</string>
    <string name="desc_bball">Bearing balls are special highly spherical and smooth balls, most commonly used in ball bearings, but also used as components in things like freewheel mechanisms. The balls come in many different grades.</string>
    <string name="desc_inner_ring">Inner rings are made from hardened rolling bearing steel and have precision ground or machined raceways. Ideal applications for using inner rings include: When in order to allow larger axial displacements of the shaft in relation to the housing, needle roller bearings must be combined with wider inner rings.</string>
    <string name="desc_outer_ring">The Outer Ring is the larger of the two bearing rings. On outer ring there is a groove on its inside diameter to form a pathway for the balls. Outer ring surface also has the same high precision finish of the inner ring. The outer ring is usually held stationery.</string>
    <string name="title_activity_instructor_menu">InstructorMenuActivity</string>
    <string name="title_activity_main2">MainActivity</string>

    // TURBO QUIZ
    // FIRST ITEM
    <string name="t_first_question">Compresses fuel and air</string>
    <string name="t_first_a">Internal</string>
    //corect
    <string name="t_first_b">External</string>
    <string name="t_first_c">Increase</string>
    <string name="t_first_d">Decrease</string>

    <string name="t_second_question">It is designed to allow the pilot to select any desired power output at any time. This includes boosting at sea level and altitude compensation</string>
    <string name="t_second_a">VAP Pressure Controller</string>
    <string name="t_second_b">Continental Turbo supercharging</string>
    //corect
    <string name="t_second_c">Density Controller</string>
    <string name="t_second_d">Lycoming Turbocharging</string>

    <string name="t_third_question">Mechanical Aspiration is the process of mechanically increasing the manifold pressure of an engine in order to _____ and ___________ horsepower</string>
    <string name="t_third_a">Increase; decrease</string>
    //corect
    <string name="t_third_b">Maintain; increase</string>
    <string name="t_third_c">Decrease; Maintain</string>
    <string name="t_third_d">None of the above</string>

    <string name="t_fourth_question">This is a safety valve used in some Continental to relieve MAP at a present b maximum pressure by venting deck pressure</string>
    <string name="t_fourth_a">Insert Plate</string>
    <string name="t_fourth_b">MAP relief valve</string>
    //corect
    <string name="t_fourth_c">Safety Valve</string>
    <string name="t_fourth_d">Safety precautions</string>

    <string name="t_fifth_question">It does not boost above 30InHg and uses to exhaust to drive the compressor</string>
    <string name="t_fifth_a">Lycoming Turbocharging</string>
    <string name="t_fifth_b">Cycoming Turbocharging</string>
    //corect
    <string name="t_fifth_c">Differential Pressure Controller</string>
    <string name="t_fifth_d">Superchargers</string>

    // BALL BEARING
    <string name="b_first_a">Crankshaft</string>
    <string name="b_first_b">Engine Mount</string>
    <string name="b_first_c">Crankcase</string>
    <string name="b_first_d">None of the above</string>

    <string name="b_second_a">Piston Pins</string>
    <string name="b_second_b">Piston Ring</string>
    <string name="b_second_c">Rocker Arm</string>
    <string name="b_second_d">Oil Control Rings</string>

    <string name="b_third_a">Piston Ring</string>
    <string name="b_third_b">Pistin Pins</string>
    <string name="b_third_c">Rocker Arm</string>
    <string name="b_third_d">Connecting Rod Assembly</string>

    <string name="b_fourth_a">Crankshaft</string>
    <string name="b_fourth_b">Ball Bearing</string>
    <string name="b_fourth_c">Piston</string>
    <string name="b_fourth_d">Articulating Rod</string>

    <string name="b_fifth_a">Camlobes</string>
    <string name="b_fifth_b">Camshaft</string>
    <string name="b_fifth_c">Push Rod</string>
    <string name="b_fifth_d">None of the above</string>
</resources>