<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_discussion"
            android:icon="@drawable/ic_discussion"
            android:title="@string/menu_discussion"/>
        <item
            android:id="@+id/nav_test"
            android:icon="@drawable/ic_knowledge"
            android:title="@string/menu_test"/>
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_signout"
            android:title="@string/menu_logout" />
    </group>
</menu>