<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".quiz.turbo.TurboFifthItemActivity">

    <LinearLayout
        android:paddingTop="60dp"
        android:background="@drawable/bgaircraftmodal"
        android:id="@+id/aircraftxmodalTLI"
        android:layout_width="350dp"
        android:layout_height="440dp"
        android:elevation="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="300dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.49">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TURBOCHARGER"
            android:textColor="#343434"
            android:textSize="22sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/turbo_fifth_question"
            android:textAlignment="center"
            android:layout_marginRight="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginBottom="40dp"
            android:layout_marginTop="50dp"
            android:lineSpacingExtra="4dp"
            android:text="@string/t_fifth_question"
            android:textColor="#343434"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <RadioGroup
            android:id="@+id/radGroup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <RadioButton
                android:id="@+id/radA"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/t_fifth_a"
                android:layout_marginBottom="5dp"/>

            <RadioButton
                android:id="@+id/radB"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/t_fifth_b"
                android:layout_marginBottom="6dp"/>

            <RadioButton
                android:id="@+id/radC"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/t_fifth_c"
                android:layout_marginBottom="5dp"/>

            <RadioButton
                android:id="@+id/radD"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/t_fifth_d"/>
        </RadioGroup>
    </LinearLayout>

    <ImageView
        android:id="@+id/aircraftModBH"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="148dp"
        android:elevation="6dp"
        android:src="@drawable/aircraft_modal"
        app:layout_constraintTop_toTopOf="@+id/overboxTLI"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>


    <LinearLayout
        android:paddingTop="60dp"
        android:background="@drawable/bgaircraftmodal"
        android:id="@+id/aircraftxmodalTLI2"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:elevation="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/overboxTLI"
        app:layout_constraintVertical_bias="0.49">

        <TextView
            android:id="@+id/is_passed"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:text="BEARING HOUSING"
            android:textColor="#343434"
            android:textSize="22sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/content"
            android:textAlignment="center"
            android:layout_marginRight="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="12dp"
            android:lineSpacingExtra="4dp"
            android:text="@string/desc_bhousing"
            android:textColor="#343434"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Button
            android:layout_marginTop="30dp"
            android:layout_marginBottom="21dp"
            android:id="@+id/btnClose"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/close"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/overboxTLI"
        android:elevation="3dp"
        android:background="@drawable/overbox"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </LinearLayout>

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="282dp"
        android:layout_marginTop="184dp"
        android:layout_marginEnd="41dp"
        android:layout_marginBottom="103dp"
        android:text="SUBMIT"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/aircraftxmodalCC"
        app:layout_constraintVertical_bias="0.411" />

    <Button
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="31dp"
        android:layout_marginTop="185dp"
        android:layout_marginEnd="163dp"
        android:layout_marginBottom="101dp"
        android:text="BACK"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnNext"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/aircraftxmodalCC" />

</androidx.constraintlayout.widget.ConstraintLayout>